--- a/main.css
+++ b/main.css
@@ -27,6 +27,13 @@ ul li a {
 .card {
   border-radius: 0 !important;
   padding: 20px !important;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px !important;
+}
+.card-body {
+  padding: 0 !important;
+}
+p {
+  margin-bottom: 0 !important;
 }
 .banner-section {
   height: 100%;
@@ -44,7 +51,7 @@ ul li a {
 }
 
 .overlay {
-  position: absolute;
+  /* position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
@@ -55,11 +62,31 @@ ul li a {
   padding: 20px;
   border-radius: 5px;
   transition: 0.3s ease;
+  background-color: white; */
+  position: absolute;
+  top: -11px;
+  bottom: 0;
+  left: -2px;
+  right: 0px;
+  height: 460px;
+  width: 260px;
+  opacity: 0;
+  padding: 20px;
+  /* border-radius: 5px; */
+  transition: 0.3s ease;
   background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px !important;
+  color: #5a5a5a !important;
 }
-
+.overlayList li {
+  list-style-type: disclosure-closed !important;
+  color: #5a5a5a !important;
+}
 .card-body:hover .overlay {
   opacity: 1;
+}
+.card-text {
+  color: #5a5a5a !important;
 }
 
 .insideBtn {
@@ -77,6 +104,7 @@ textarea {
 }
 .form-label {
   margin-bottom: 0 !important;
+  font-size: 14px !important;
 }
 
 .modal-body,
